fix alignment, add margin bottom

--- a/starter/04-CSS-Layouts/src/static/css/output.css
+++ b/starter/04-CSS-Layouts/src/static/css/output.css
@@ -572,12 +572,20 @@ video {
   position: static;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .block {
   display: block;
 }
 
 .flex {
   display: flex;
+}
+
+.items-center {
+  align-items: center;
 }
 
 .justify-between {
